@@ -122,18 +122,18 @@
 			<dependency>
 				<groupId>org.apache.logging.log4j</groupId>
 				<artifactId>log4j-api</artifactId>
-				<version>2.22.0</version>
+				<version>2.23.1</version>
 			</dependency>
 			<dependency>
 				<groupId>org.apache.logging.log4j</groupId>
 				<artifactId>log4j-core</artifactId>
-				<version>2.22.0</version>
+				<version>2.23.1</version>
 			</dependency>
 			<!-- Bouncy castle -->
 			<dependency>
 			    <groupId>org.bouncycastle</groupId>
 			    <artifactId>bcprov-jdk18on</artifactId>
-			    <version>1.77</version>
+			    <version>1.78.1</version>
 			</dependency>
 			<!-- Jacksum -->
 			<dependency>
@@ -151,45 +151,45 @@
 			<dependency>
 				<groupId>org.apache.tika</groupId>
 				<artifactId>tika-core</artifactId>
-				<version>2.9.1</version>
+				<version>2.9.2</version>
 			</dependency>
 			<dependency>
 				<groupId>org.apache.tika</groupId>
 				<artifactId>tika-parsers-standard-package</artifactId>
-				<version>2.9.1</version>
+				<version>2.9.2</version>
 			</dependency>
 			<dependency>
 				<groupId>org.apache.pdfbox</groupId>
 				<artifactId>pdfbox</artifactId>
-				<version>2.0.30</version>
+				<version>2.0.32</version>
 			</dependency>
 			<!-- HTML parser -->
 			<dependency>
 				<groupId>org.jsoup</groupId>
 				<artifactId>jsoup</artifactId>
-				<version>1.17.2</version>
+				<version>1.18.1</version>
 			</dependency>
 			<!-- XML serialization (and more) -->
 			<dependency>
 				<groupId>com.google.code.gson</groupId>
 				<artifactId>gson</artifactId>
-				<version>2.10.1</version>
+				<version>2.11.0</version>
 			</dependency>
 			<!-- Jasper reports -->
 			<dependency>
 				<groupId>net.sf.jasperreports</groupId>
 				<artifactId>jasperreports</artifactId>
-				<version>6.21.0</version>
+				<version>7.0.0</version>
 			</dependency>
 			<dependency>
 				<groupId>net.sf.jasperreports</groupId>
 				<artifactId>jasperreports-functions</artifactId>
-				<version>6.21.0</version>
+				<version>7.0.0</version>
 			</dependency>
 			<dependency>
 				<groupId>net.sf.jasperreports</groupId>
 				<artifactId>jasperreports-fonts</artifactId>
-				<version>6.21.0</version>
+				<version>7.0.0</version>
 			</dependency>
 			<dependency>
 				<groupId>xalan</groupId>
@@ -206,7 +206,7 @@
 			<dependency>
 				<groupId>org.hsqldb</groupId>
 				<artifactId>hsqldb</artifactId>
-				<version>2.7.2</version>
+				<version>2.7.3</version>
 			</dependency>
 			<!-- Twelve Monkeys ImageIO -->
 			<dependency>
